Added form function and validation

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.1",
@@ -19,6 +20,7 @@
     "react-scroll-to-component": "^1.0.2",
     "styled-components": "^5.3.6",
     "typeface-roboto": "^1.1.13",
+    "validate.js": "^0.13.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
